[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
regex = { version = "1.11.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
tauri = { version = "2.2.5", features = ["tray-icon"] }
tauri-plugin-store = { version = "2.2.0" }
unbug = { version = "0.4.0" }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = []

[package]
name = "roundwindows"
version = "0.0.9"
